--- a/src/tests/AutomatedTests/AutomatedTests/AutomatedTests.csproj
+++ b/src/tests/AutomatedTests/AutomatedTests/AutomatedTests.csproj
@@ -93,10 +93,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CreateEventSteps.feature</DependentUpon>
     </Compile>
-    <Compile Include="Features\EditEventSteps.feature.cs">
+    <Compile Include="Features\DeleteEventSteps.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EditEventSteps.feature</DependentUpon>
+      <DependentUpon>DeleteEventSteps.feature</DependentUpon>
+    </Compile>
+    <Compile Include="Features\UpdateEventSteps.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UpdateEventSteps.feature</DependentUpon>
     </Compile>
     <Compile Include="Features\SeatPurchaseSteps.feature.cs">
       <AutoGen>True</AutoGen>
@@ -105,7 +110,7 @@
     </Compile>
     <Compile Include="Steps\AuthorizationSteps.cs" />
     <Compile Include="Steps\CreateEventSteps.cs" />
-    <Compile Include="Steps\EditEventSteps.cs" />
+    <Compile Include="Steps\UpdateEventSteps.cs" />
     <Compile Include="Steps\SeatPurchaseSteps.cs" />
     <Compile Include="Utils\CustomConditionals.cs" />
     <Compile Include="Utils\DriverSelectors.cs" />
@@ -117,7 +122,7 @@
     <Compile Include="WebPages\BalanceReplenishmentPage.cs" />
     <Compile Include="WebPages\CartPage.cs" />
     <Compile Include="WebPages\CreateEventPage.cs" />
-    <Compile Include="WebPages\EditEventPage.cs" />
+    <Compile Include="WebPages\UpdateEventPage.cs" />
     <Compile Include="WebPages\HomePage.cs" />
     <Compile Include="WebPages\Hooks\CartHooks.cs" />
     <Compile Include="WebPages\Hooks\CreateEventStepsHooks.cs" />
@@ -161,9 +166,13 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>CreateEventSteps.feature.cs</LastGenOutput>
     </None>
-    <None Include="Features\EditEventSteps.feature">
+    <None Include="Features\DeleteEventSteps.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>EditEventSteps.feature.cs</LastGenOutput>
+      <LastGenOutput>DeleteEventSteps.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\UpdateEventSteps.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>UpdateEventSteps.feature.cs</LastGenOutput>
     </None>
     <None Include="Features\LoginSteps.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
